Inner hits support with hybrid query
Signed-off-by: Varun Jain <varunudr@amazon.com>